// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonLinkComponent should match snapshot with default props 1`] = `
<div
  id="root5"
>
  <a
    class="card w-100 pb-3 pt-3"
    href="/test-route"
    rel="noopener"
  >
    <mat-icon
      aria-hidden="true"
      class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
      data-mat-icon-type="font"
      role="img"
    >
      fa fa-icon
    </mat-icon>
    <span>
      Test Label
    </span>
    <mat-icon
      aria-hidden="true"
      class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
      data-mat-icon-type="font"
      role="img"
    >
      chevron_right
    </mat-icon>
  </a>
</div>
`;

exports[`ButtonLinkComponent should match snapshot with different icon 1`] = `
<div
  id="root7"
>
  <a
    class="card w-100 pb-3 pt-3"
    href="/settings"
    rel="noopener"
  >
    <mat-icon
      aria-hidden="true"
      class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
      data-mat-icon-type="font"
      role="img"
    >
      settings
    </mat-icon>
    <span>
      Settings
    </span>
    <mat-icon
      aria-hidden="true"
      class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
      data-mat-icon-type="font"
      role="img"
    >
      chevron_right
    </mat-icon>
  </a>
</div>
`;

exports[`ButtonLinkComponent should match snapshot with empty-like values 1`] = `
<div
  id="root11"
>
  <a
    class="card w-100 pb-3 pt-3"
    href="/"
    rel="noopener"
  >
    <mat-icon
      aria-hidden="true"
      class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
      data-mat-icon-type="font"
      role="img"
    >
      
    </mat-icon>
    <span>
      
    </span>
    <mat-icon
      aria-hidden="true"
      class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
      data-mat-icon-type="font"
      role="img"
    >
      chevron_right
    </mat-icon>
  </a>
</div>
`;

exports[`ButtonLinkComponent should match snapshot with long label 1`] = `
<div
  id="root9"
>
  <a
    class="card w-100 pb-3 pt-3"
    href="/long-route-name"
    rel="noopener"
  >
    <mat-icon
      aria-hidden="true"
      class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
      data-mat-icon-type="font"
      role="img"
    >
      info
    </mat-icon>
    <span>
      This is a very long button label
    </span>
    <mat-icon
      aria-hidden="true"
      class="mat-icon notranslate material-icons mat-ligature-font mat-icon-no-color"
      data-mat-icon-type="font"
      role="img"
    >
      chevron_right
    </mat-icon>
  </a>
</div>
`;
